@@ -1,5 +1,10 @@
 2013-10-09  Roland McGrath  <mcgrathr@google.com>
 
+	* elf64-alpha.c (elf64_alpha_relax_tls_get_addr): Cast switch
+	expression to int to silence over-eager compiler warnings.
+
+2013-10-09  Roland McGrath  <mcgrathr@google.com>
+
 	* xcofflink.c (_bfd_xcoff_bfd_final_link): Don't touch EREL in
 	loop that doesn't use (or initialize) it.
 
